<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".Facebook.MenuHistoriasFacebook">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="321dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/facebook_logos_png19757"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/modalidad_de_historias"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <Button
        android:id="@+id/buttonUtilidad3"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="EmpezarUtilidadHistoriasFacebook"
        android:text="@string/explicacion_de_utilidad"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/buttonComponentes3"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="EmpezarComponentesBasicosFacebook"
        android:text="@string/componentes_basicos"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUtilidad3" />

    <Button
        android:id="@+id/buttonCreacionHis3"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="EmpezarCreacionHistoriasFacebook"
        android:text="@string/creacion_historias"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonComponentes3" />

    <Button
        android:id="@+id/buttonDiferenciador3"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="EmpezarDiferenciadorHistoriasFacebook"
        android:text="@string/demuesta_que_sabes_diferenciar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreacionHis3" />

    <Button
        android:id="@+id/buttonReiniciar20"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/boton_redondo_menu"
        android:onClick="EmpezarPrimeraPantallaFacebook2"
        android:text="@string/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiferenciador3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>