<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".InicioSesion">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="321dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/inicio_de_sesi_n"
        android:textColor="#9C27B0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/User"
        android:layout_width="308dp"
        android:layout_height="93dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#ffffff"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="308dp"
        android:layout_height="93dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#ffffff"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorHint="#ffffff"
        android:textColorLink="#ffffff"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="InicioSesion"
        android:text="@string/entrar"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="RegistroData"
        android:text="@string/registrar"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>