<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".Instagram.PrimeraPantallaInstagram">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="321dp"
        android:layout_height="128dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="167dp"
        android:layout_height="167dp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@drawable/icono_instagram"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/buttonAprender"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="MenuAprenderInstagram"
        android:text="@string/aprender"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/buttonProbar"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="JugarInstagram"
        android:text="@string/prueba_lo_aprendido"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAprender" />

    <Button
        android:id="@+id/buttonCrearHistorias"
        android:layout_width="296dp"
        android:layout_height="67dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/boton_redondo_menu"
        android:backgroundTint="#9C27B0"
        android:onClick="MenuHistoriasInstagram"
        android:text="@string/creacion_de_historias"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProbar" />

    <Button
        android:id="@+id/buttonReiniciar17"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/boton_redondo_menu"
        android:onClick="MenuPrincipalInstagram"
        android:text="@string/atras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCrearHistorias"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>